# uapi-sdk-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: quickstart.rs
internal/: Cargo.toml  README.md
internal/.openapi-generator/: FILES
internal/docs/: Base64.md  ClipzyApi.md  ConvertApi.md  DailyApi.md  DefaultApi.md  EndpointsAggregate.md  EndpointsAggregateEndpointsInner.md  EndpointsAggregateUnaggregated.md  FormatJson.md  FormatJsonTrivia.md  FormatJsonTriviaOptionsInner.md  GameApi.md  GetAiTranslateLanguages200Response.md  GetAiTranslateLanguages200ResponseData.md  GetAiTranslateLanguages200ResponseDataContextsInner.md  GetAiTranslateLanguages200ResponseDataLanguagesInner.md  GetAiTranslateLanguages200ResponseDataStylesInner.md  GetAiTranslateLanguages200ResponsePerformance.md  GetAiTranslateLanguages200ResponsePerformanceTypicalResponseTimeMs.md  GetAnswerbookAsk200Response.md  GetAnswerbookAsk400Response.md  GetAnswerbookAsk500Response.md  GetAvatarGravatar400Response.md  GetAvatarGravatar404Response.md  GetClipzyGet200Response.md  GetClipzyGet400Response.md  GetClipzyGet404Response.md  GetClipzyRaw400Response.md  GetClipzyRaw403Response.md  GetConvertUnixtime200Response.md  GetConvertUnixtime400Response.md  GetDailyNewsImage500Response.md  GetDailyNewsImage502Response.md  GetGameEpicFree200Response.md  GetGameEpicFree200ResponseDataInner.md  GetGameEpicFree500Response.md  GetGameMinecraftHistoryid200Response.md  GetGameMinecraftHistoryid200ResponseHistoryInner.md  (+409 more)
src/: client.rs  errors.rs  lib.rs
(+330 files in other folders)
