[package]
name = "uapi-sdk-rust"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "UAPI Rust SDK - idiomatic, typed, domain-driven API client."
repository = "https://github.com/AxT-Team/uapi-sdk-rust"
readme = "README.md"
keywords = ["uapi", "sdk", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
url = "2.5"
time = { version = "0.3", features = ["parsing", "formatting"] }
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
